fix: dropdown menu alignment for below 1280px resolution (#153)
fix: filter dropdown menu alignment for below 1280px resolution in org-chart

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -148,8 +148,11 @@
                 div[data-filter-close]{
                     @extend .d-none;
                 }
-               
+                
                 @extend .row,.gap-3,.flex-wrap,.w-100,.bg-transparent;
+                @media (max-width:1279px) {
+                    gap: 10px !important;
+                }
                 & div{
                     @extend .bg-white,.shadow,.rounded-2,.fs-6,.py-3,.px-3,.align-items-center,.d-flex,.justify-content-between;
                     color: #0d2c3678;  
